fixed some sentences, added padding and spacing between text

--- a/src/app/agendamento-servico/agendamento-servico.component.css
+++ b/src/app/agendamento-servico/agendamento-servico.component.css
@@ -42,6 +42,7 @@ body {
 /* Ajusta a parte de texto ao lado da imagem */
 .info-texto {
   margin-left: 15px;
+  padding: 10px;
 }
 
 /* Nome do profissional */
